--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,7 @@
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
-    "arrow-parens": "off",
-    "no-restricted-globals": 0
+    "arrow-parens": "off"
   },
   "ignorePatterns": [
     "dist/",
